feat: Initial commit of StreamKernel v1.0 (Java 21 Virtual Thread Orchestrator)
Establishes the foundational codebase for StreamKernel (formerly Algorithm Arena).

Key Capabilities:
- Core: High-throughput orchestration engine using Java 21 Virtual Threads.
- Architecture: SPI-based plugin system separating Kernel logic from I/O.
- Data: Kafka Avro integration with Schema Registry enforcement.
- Ops: Docker Compose infrastructure, ZGC tuning, and Prometheus metrics.

Includes comprehensive README, benchmark configurations, and initial unit tests.